Changelog
=========


1.11.3 (unreleased)
-------------------

- Remove obsolete source checkouts [Nachtalb]


1.11.2 (2019-03-29)
-------------------

- Bugfix: Adapt flaky test to not check list order [busykoala]
- Bugfix: Add IS_PLONE_5 implementation independent of ftw.testing [busykoala]


1.11.1 (2019-03-22)
-------------------

- Bugfix: Add missing comma in setup.py [busykoala]



1.11.0 (2019-03-22)
-------------------

- Move ressources to plone bundle and adapt tests for plone 5.1 (especially
  an adaption in xml parsing) [busykoala]


1.10.2 (2018-08-22)
-------------------

- Swap the NewsListingBlock default view from "block_view" to "@@redirect_to_parent" [Nachtalb]


1.10.1 (2017-12-19)
-------------------

- Bugfix of the option to hide emtpy news listing block introduced
  in 1.10.0. [mbaechtold]


1.10.0 (2017-10-12)
-------------------

- Update RSS to version 2.0 in news_listing_rss view [raphael-s]

- Add option to hide emtpy news listing block. [mbaechtold]

- Use "ftw.referencewidget" as the widget for selecting the paths used
  to filter the news items. [mbaechtold]


1.9.0 (2017-08-08)
------------------

- Move base test classes to own module. [mbaechtold]


1.8.3 (2017-03-30)
------------------

- Fix a bug which prevented inactive news from being shown in combination
  with Solr. [mbaechtold]


1.8.2 (2017-03-13)
------------------

- Fix a unicode bug when the RSS view is called on a news listing block
  having umlauts in its title. [mbaechtold]


1.8.1 (2017-03-07)
------------------

- Make NewsFolder and NewsListingBlock addable on plone site per default [raphael-s]


1.8.0 (2017-02-28)
------------------

- Fix a bug where the news portlet was shown when it shouldn't have
  been shown. [mbaechtold]

- Include inactive news items in the listing view and the news portlet
  if the user has the permission to add news items. [mbaechtold]


1.7.0 (2017-02-14)
------------------

- Fix news mopage template. [mbaechtold]
