@@ -3,22 +3,47 @@ from ftw.builder import Builder
 from ftw.builder import create
 from ftw.news.testing import FTW_NEWS_FUNCTIONAL_TESTING
 from ftw.news.tests.base import FunctionalTestCase
+from ftw.news.tests.utils import LanguageSetter
 from ftw.testbrowser import browsing
-from plone import api
-import transaction
+from zope.i18n.locales import locales
 
 
 news_portlet_action = '/++contextportlets++plone.rightcolumn/+/' \
                       'newsarchiveportlet'
 
 
-class TestNewsArchivePortlets(FunctionalTestCase):
+class TestNewsArchivePortlets(FunctionalTestCase, LanguageSetter):
 
     layer = FTW_NEWS_FUNCTIONAL_TESTING
 
     def setUp(self):
         super(TestNewsArchivePortlets, self).setUp()
         self.grant('Manager')
+
+        default = 'en'
+        supported = ['en', 'de']
+        self.set_language_settings(default, supported)
+
+    def _set_language_de(self):
+        """This Function is used to set the language of the plone site.
+        We need this, because we wan't to make sure that the language is
+        inherited when there isn't one forced.
+        """
+        locale = locales.getLocale('de')
+        target_language = locale.id.language
+
+        # If we get a territory, we enable the combined language codes
+        use_combined = False
+        if locale.id.territory:
+            use_combined = True
+            target_language += '_' + locale.id.territory
+
+        # As we have a sensible language code set now, we disable the
+        # start neutral functionality (not available in plone 5.1 anymore).
+        start_neutral = False
+
+        self.set_language_settings(target_language, [target_language],
+                                   use_combined, start_neutral)
 
     def _add_portlet(self, browser, context=None):
         """
@@ -30,6 +55,7 @@ class TestNewsArchivePortlets(FunctionalTestCase):
         browser.login().visit(context, view='@@manage-portlets')
         browser.css('#portletmanager-plone-rightcolumn form')[0].fill(
             {':action': news_portlet_action}).submit()
+        browser.css('#form').first.fill({'Title': 'Archive'}).submit()
         browser.open(context)
 
     @browsing
@@ -123,16 +149,19 @@ class TestNewsArchivePortlets(FunctionalTestCase):
 
     @browsing
     def test_month_with_umlaut(self, browser):
-        lang_tool = api.portal.get_tool('portal_languages')
-        lang_tool.setDefaultLanguage('de')
-        transaction.commit()
+        self._set_language_de()
 
         news_folder = create(Builder('news folder').titled(u'News Folder')
                              .with_property('layout', 'news_listing'))
         create(Builder('news').titled(u'News Entry 1').within(news_folder)
                .having(news_date=datetime(2013, 3, 1)))
 
-        self._add_portlet(browser, news_folder)
+        # Helper method sets the title in english and not in german
+        browser.login().visit(news_folder, view='@@manage-portlets')
+        browser.css('#portletmanager-plone-rightcolumn form')[0].fill(
+            {':action': news_portlet_action}).submit()
+        browser.css('#form').first.fill({'Titel': 'Archiv'}).submit()
+        browser.open(news_folder)
 
         browser.css('.month').first.click()
         self.assertEqual(1, len(browser.css('.news-item')))
